err/sy85tools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sy85'...
Compiling './lib/python3.5/site-packages/sy85/binreader.py'...
***   File "./lib/python3.5/site-packages/sy85/binreader.py", line 57
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sy85/binutils.py'...
***   File "./lib/python3.5/site-packages/sy85/binutils.py", line 23
    except NameError, ne2:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sy85/converters'...
Compiling './lib/python3.5/site-packages/sy85/converters/smf.py'...
***   File "./lib/python3.5/site-packages/sy85/converters/smf.py", line 161
    print 'read_varlen', read_varlen('@')
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sy85/data'...
Listing './lib/python3.5/site-packages/sy85/scripts'...
Compiling './lib/python3.5/site-packages/sy85/scripts/sy85all.py'...
***   File "./lib/python3.5/site-packages/sy85/scripts/sy85all.py", line 533
    print sys.stderr, "Could not read input file '%s'." % infile
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sy85/scripts/sy85sxtool.py'...
***   File "./lib/python3.5/site-packages/sy85/scripts/sy85sxtool.py", line 35
    except SysexParseError, exc:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sy85/sysex.py'...
***   File "./lib/python3.5/site-packages/sy85/sysex.py", line 69
    except SysexParseError, exc:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sy85/sywave.py'...
***   File "./lib/python3.5/site-packages/sy85/sywave.py", line 82
    print "Loop start:", sywave.loop_start
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sy85tools-0.2.2a0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
